--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
+    "angular2-bootstrap-confirm": "^1.0.4",
     "core-js": "^2.4.1",
     "ng2-modal": "0.0.24",
     "rxjs": "5.0.0-beta.12",
